<resources>
    <string name="app_name">ALC4 Phase 1</string>
    <string name="my_profileButton">MY PROFILE</string>
    <string name="about_alcButton">ABOUT ALC</string>
    <string name="welcome_text">Welcome to ALC 4.0</string>
    <string name="profile_pic">My profile picture</string>
    <string name="track_tView">Track:</string>
    <string name="textView_country">Country:</string>
    <string name="textView_android">Android</string>
    <string name="textView_uganda">Uganda</string>
    <string name="textView_email">Email:</string>
    <string name="my_emailAdress">andrew58934@gmail.com</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_digits">0793231020</string>
    <string name="slack_username">Slack Username:</string>
    <string name="slack_user">\@Kawalya</string>
    <string name="my_name">KAWALYA ANDREW</string>
</resources>
