<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/regular_size"
        android:adjustViewBounds="true"
        android:maxWidth="180dp"
        android:maxHeight="180dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/image"
        android:contentDescription="@string/profile_pic" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/regular_size"
        android:textColor="#F7000000"
        android:textSize="@dimen/regular_pixels"
        android:textStyle="bold"
        android:text="@string/my_name" />

    <View
        android:id="@+id/line_view"
        style="@style/Divider.Horizontal"
        android:layout_below="@+id/text_name"
        android:layout_marginLeft="@dimen/regular_size"
        android:layout_marginTop="6dp"
        android:background="#000000"
        android:layout_height="2dp"
        android:layout_marginRight="@dimen/regular_size" />

    <TextView
        android:id="@+id/textView_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_view"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/regular_size"
        android:fontFamily="sans-serif-black"
        android:text="@string/track_tView"
        android:textSize="@dimen/regular_pixels" />

    <TextView
        android:id="@+id/textView_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_android"
        android:layout_below="@id/line_view"
        android:layout_toEndOf="@+id/textView_track"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/regular_size"
        android:textColor="#251813"
        android:textSize="@dimen/regular_pixels"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_track"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/regular_size"
        android:fontFamily="sans-serif-black"
        android:text="@string/textView_country"
        android:textSize="@dimen/regular_pixels" />

    <TextView
        android:id="@+id/textView_ug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_uganda"
        android:layout_below="@id/textView_track"
        android:layout_toEndOf="@+id/textView_country"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/regular_size"
        android:textColor="#251813"
        android:textSize="@dimen/regular_pixels"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_country"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/regular_size"
        android:fontFamily="sans-serif-black"
        android:text="@string/textView_email"
        android:textSize="@dimen/regular_pixels" />

    <TextView
        android:id="@+id/textView_myEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_emailAdress"
        android:layout_below="@id/textView_ug"
        android:layout_toEndOf="@+id/textView_email"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/regular_size"
        android:textColor="#251813"
        android:textSize="@dimen/regular_pixels"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView_phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_email"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/regular_size"
        android:fontFamily="sans-serif-black"
        android:text="@string/phone_number"
        android:textSize="@dimen/regular_pixels" />

    <TextView
        android:id="@+id/textView_phoneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_digits"
        android:layout_below="@id/textView_myEmail"
        android:layout_toEndOf="@+id/textView_phoneNum"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/regular_size"
        android:textColor="#251813"
        android:textSize="@dimen/regular_pixels"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView_slack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_phoneNum"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/regular_size"
        android:fontFamily="sans-serif-black"
        android:text="@string/slack_username"
        android:textSize="@dimen/regular_pixels" />

    <TextView
        android:id="@+id/textView_slackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_phoneValue"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/regular_size"
        android:layout_toEndOf="@+id/textView_slack"
        android:text="@string/slack_user"
        android:textColor="#251813"
        android:textSize="@dimen/regular_pixels"
        android:textStyle="italic" />




</RelativeLayout>